# ict-ops-team-lecture01-ai-agent

./: index.html  script.md
Assignment/: CLAUDE.md  PLAN.md  README.md  TASK-0-chore-scaffolding.md  TASK-1-feat-weather-tool.md  TASK-2-feat-langgraph-agent.md  TASK-3-feat-fastapi-chat.md  TASK-4-feat-frontend-chat.md  TASK-5-chore-integration-e2e.md  start.sh
Assignment/backend/: README.md
Assignment/backend/src/: agent.py  config.py  main.py  weather.py
Assignment/backend/test/: test_api.py  test_health.py  test_weather.py
Assignment/frontend/: package.json
Assignment/frontend/src/: app.js  index.html
Assignment/frontend/test/: app.test.js  smoke.test.js
Assignment/harness/: .gitignore  ASSIGNMENT.md  CLAUDE.md  PLAN.md  TASK-0-chore-scaffolding.md  TASK-5-chore-integration-e2e.md
Assignment/harness/backend/: pyproject.toml
Assignment/harness/backend/src/: main.py
Assignment/harness/backend/test/: conftest.py  test_agent.py
Assignment/harness/frontend/: README.md  package-lock.json
Assignment/harness/frontend/src/: styles.css
