[project]
name = "weather-agent-backend"
version = "0.1.0"
description = "날씨 AI Agent backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "langchain>=1.0,<2.0",
  "langgraph>=1.0,<2.0",
  "langchain-anthropic>=1.0,<2.0",
  "langchain-core>=1.0,<2.0",
  "langsmith>=0.3.0",
  "httpx",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["test"]
